<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/new_bg"
    tools:context=".ui.address.AddAddressActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginVertical="5dp"
            android:layout_marginHorizontal="10dp">

            <ImageView
                android:id="@+id/exit"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:padding="10dp"
                android:src="@drawable/baseline_clear_24"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="@color/black" />


            <TextView
                android:id="@+id/new_item_sign"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_flex"
                android:gravity="center_vertical"
                android:text="@string/add_address"
                android:textColor="@color/black"
                android:textSize="19sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@id/exit"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/exit" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>


    <Button
        android:id="@+id/getLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="100dp"
        android:backgroundTint="@color/g_dark_blue"
        android:fontFamily="@font/roboto_flex"
        android:paddingVertical="10dp"
        android:text="@string/get_location"
        android:textColor="@color/new_bg"
        android:textStyle="bold" />

    <Button
        android:id="@+id/confirmLocation"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_below="@id/getLocation"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="-90dp"
        android:backgroundTint="@color/g_dark_blue"
        android:fontFamily="@font/roboto_flex"
        android:text="@string/confirm_location"
        android:textColor="@color/new_bg"
        android:visibility="gone" />


    <TextView
        android:id="@+id/address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="150dp"
        android:layout_marginBottom="20dp"
        android:fontFamily="@font/roboto_flex"
        android:text="@string/address"
        android:textColor="@color/g_dark_blue"
        android:textSize="25sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/city"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/address"
        android:layout_alignStart="@id/address"
        android:layout_marginBottom="20dp"
        android:fontFamily="@font/roboto_flex"
        android:text="@string/city"
        android:textColor="@color/g_dark_blue"
        android:textSize="25sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/country"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/city"
        android:layout_alignStart="@id/address"
        android:layout_marginBottom="20dp"
        android:fontFamily="@font/roboto_flex"
        android:text="@string/country"
        android:textColor="@color/g_dark_blue"
        android:textSize="25sp"
        android:textStyle="bold" />
</RelativeLayout>